--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,9 @@ script:
   - docker build -t udagram-api-feed ./udagram-api-feed
   - docker build -t udagram-api-user ./udagram-api-user
   - docker build -t udagram-frontend ./udagram-frontend
-  - docker tag udagram-api-feed sudkul/udagram-api-feed:v1
-  - docker tag udagram-api-user sudkul/udagram-api-user:v1
-  - docker tag udagram-frontend sudkul/udagram-frontend:v1
+  - docker tag udagram-api-feed minhsama2000/udagram-api-feed:v1
+  - docker tag udagram-api-user minhsama2000/udagram-api-user:v1
+  - docker tag udagram-frontend minhsama2000/udagram-frontend:v1
 
 # Tasks to perform after the process is successful. Formatting the Docker username and password as below enables you to programmatically log in without having the password exposed in logs.
 after_success:
