--- a/udagram-reverseproxy/nginx.conf
+++ b/udagram-reverseproxy/nginx.conf
@@ -8,36 +8,52 @@ error_log /dev/stdout debug;
 
 http {
     sendfile on;
-
-    upstream user {
-        server backend-user:8080;
-    }
-
-    upstream feed {
-        server backend-feed:8080;
-    }
+    
     proxy_set_header   Host $host;
     proxy_set_header   X-Real-IP $remote_addr;
     proxy_set_header   X-NginX-Proxy true;
     proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header   X-Forwarded-Host $server_name;
+    # server {
+    #     listen 8055;
+    #     server_name localhost;
 
+    #     location / {
+    #         # proxy_pass http://frontend:8100;
+    #         root /usr/share/nginx/html;
+    #         index index.html index.htm;
+    #         try_files $uri $uri/ /index.html;
+    #         # add_header Content-Type text/html;
+    #         # return 200 '<html><body>Hello world</body></html>';
+    #     }
+
+    #     location /api/v0/feed {
+    #         proxy_pass http://backend-feed:8080;
+    #     }
+
+    #     location /api/v0/users {
+    #         proxy_pass http://backend-user:8080;
+    #     }
+    # }
     server {
         listen 8080;
         server_name localhost;
 
         location / {
+            # proxy_pass http://frontend:8100;
             root /usr/share/nginx/html;
             index index.html index.htm;
             try_files $uri $uri/ /index.html;
+            # add_header Content-Type text/html;
+            # return 200 '<html><body>Hello world</body></html>';
         }
 
         location /api/v0/feed {
-            proxy_pass http://feed;
+            proxy_pass http://backend-feed:8080;
         }
 
         location /api/v0/users {
-            proxy_pass http://user;
+            proxy_pass http://backend-user:8080;
         }
     }
 }
