--- a/udagram-api-feed/backend-feed-deployment.yaml
+++ b/udagram-api-feed/backend-feed-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: backend-feed
-        image: minhsama2000/udagram-api-feed:v2
+        image: minhsama2000/udagram-api-feed:v4
         ports:
         - containerPort: 8080
         env:
@@ -64,11 +64,25 @@ spec:
           valueFrom:
             secretKeyRef:
               name: env-secret
-              key: POSTGRES_USERNAME      
+              key: POSTGRES_USERNAME
+        - name: AWS_ACCESS_KEY_ID
+          valueFrom:
+            secretKeyRef:
+              name: aws-secret
+              key: aws_access_key_id
+        - name: AWS_SECRET_ACCESS_KEY
+          valueFrom:
+            secretKeyRef:
+              name: aws-secret
+              key: aws_secret_access_key
+        - name: AWS_SESSION_TOKEN
+          valueFrom:
+            secretKeyRef:
+              name: aws-secret
+              key: aws_session_token
         volumeMounts:
         - name: aws-secret
-          mountPath: "/root/.aws/"
-          readOnly: true 
+          mountPath: "/root/.aws/"        
       restartPolicy: Always
       volumes:
       - name: aws-secret
